# sales_attribution

./: README.md  pyproject.toml
batch_extraction_sales_attribution/: batch_data_loader.py  config.yml
docs/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
landing_place/crm_data_long/part_created=2025-03-16/: data.parquet
landing_place/dsp_data_long/part_created=2025-03-16/: data.parquet
landing_place/sales_data_long/part_created=2025-03-16/: data.parquet
schibsted_dbt_project/: .user.yml  dbt_project.yml  profiles.yml
schibsted_dbt_project/macros/: get_custom_schema.sql
schibsted_dbt_project/models/: schema.yml
schibsted_dbt_project/models/analytics/: ad_impact_on_sales.sql  revenue_by_sales_rep_with_yoy_growth.sql  revenue_per_product_with_yoy_growth.sql  sales_attribution.sql
schibsted_dbt_project/models/final/: final_dsp.sql  final_sales.sql  final_sales_representative.sql
schibsted_dbt_project/models/raw/: raw_dsp.sql  raw_sales.sql  raw_sales_representative.sql
schibsted_dbt_project/models/staging/: staging_dsp.sql  staging_sales.sql  staging_sales_representative.sql
schibsted_dbt_project/seeds/: product_brand_mapping.csv
source_data/: crm_data_long.csv  dsp_data_long.csv  sales_data_long.csv
